[project]
name = "explorateur_skadioglu_vpandiar_hhu16"
version = "0.0.1"
authors = [
  { name="Serdar Kadioglu", email="serdark@cs.brown.edu" },
  { name="Vignesh Pandiarajan", email="vpandiar@cs.brown.edu" },
  { name="Cristina Hu", email="hhu16@cs.brown.edu" },
]
description = "A python package created to interpret search problems as a series of states and executions, which lends itself to tree search."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/skadio/explorateur"
Issues = "https://github.com/skadio/explorateur/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Add your dependencies here
install_requires = [
    "joblib==1.4.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pydot==2.0.0",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "six==1.16.0",
    "threadpoolctl==3.4.0",
    "tzdata==2024.1"
]